@@ -68,12 +68,12 @@ S3method(format, "news_db")
 S3method(format, "object_size")
 S3method(format, "roman")
 S3method(getRcode, vignette)
-S3method(head, data.frame)
+# S3method(head, data.frame)
 S3method(head, default)
 S3method(head, "function")
 S3method(head, matrix)
 S3method(head, ftable)
-S3method(head, table)
+# S3method(head, table)
 S3method(print, "aspell")
 S3method(print, "aspell_inspect_context")
 S3method(print, Bibtex)
@@ -114,7 +114,8 @@ S3method(str, default)
 S3method(subset, "news_db")
 S3method(summary, aspell)
 S3method(summary, packageStatus)
-S3method(tail, data.frame)
+S3method(tail, array)
+# S3method(tail, data.frame)
 S3method(tail, default)
 S3method(tail, "function")
 S3method(tail, matrix)
